feat: implementing the routes for users
